Fix flex on smaller images

--- a/collection-styles.css
+++ b/collection-styles.css
@@ -9,34 +9,28 @@ header {
 }
 
 .pics {
-  height: 600px;
-  width: 600%;
+  width: 1300px;
+  height: 500px;
+  overflow: hidden;
   display: flex;
-  align-content: center;
+  flex-flow: column wrap;
+  align-content: flex-start;
+
+
 }
 
-.box-two {
-  height: 200px;
-  width: 200px;
-  display: flex;
-  flex-direction: column;
+#main-box {
+  padding-top: 12px;
+  width: 420px;
+  height: 420px;
 }
 
 .box-two img {
   height: 200px;
   width: 200px;
-  display: flex;
-  flex-direction: column;
-  align-content: space-around;
+  /* display: flex;
+  flex-direction: column; */
+  margin: 10px;
 
-}
 
-#box-one {
-  height: 400px;
-  width: 400px;
-  display: flex;
-}
-
-img {
-  margin: 20px;
 }
